deploy: fccb32a6a4951d0610620eccbe86a73660aaff4f

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <meta name=twitter:card content>
 <meta name=twitter:site content>
 <meta name=twitter:creator content>
-<link rel=icon href=http://example.org/favicon.png>
-<link rel=stylesheet href=/css/style.min.5806cb2b06171edfca96fdcebbd60c45191277e28cb4edac4f64ecb47f26ed05.css>
+<link rel=icon href=https://hanskan89.github.io/veebimargis/favicon.png>
+<link rel=stylesheet href=/veebimargis/css/style.min.5806cb2b06171edfca96fdcebbd60c45191277e28cb4edac4f64ecb47f26ed05.css>
 </head><body class="page page-home">
 <div id=main-menu-mobile class=main-menu-mobile>
 <ul>
@@ -22,9 +22,9 @@
 <div class=header>
 <div class=container>
 <div class=logo>
-<a href=http://example.org/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
+<a href=https://hanskan89.github.io/veebimargis/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
 </div><div class=logo-mobile>
-<a href=http://example.org/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
+<a href=https://hanskan89.github.io/veebimargis/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
 </div><div id=main-menu class=main-menu>
 <ul>
 </ul></div><button id=toggle-main-menu-mobile class="hamburger hamburger--slider" type=button>
@@ -184,14 +184,11 @@ bg-danger text-light">halb</span>
 bg-success text-light">hea</span>
 <span class="badge rounded-pill
 bg-dark text-light">uus info</span>
-</p><p>Secondary
-Success
-Danger
-Warning</p></div></div></div></div></div></div><div class=sub-footer>
+</p><p>Test</p></div></div></div></div></div></div><div class=sub-footer>
 <div class=container>
 <div class=row>
 <div class=col-12>
 <div class=sub-footer-inner>
 <ul>
-<li class=zerostatic><a href=https://www.zerostatic.io>www.zerostatic.io</a></li></ul></div></div></div></div></div><script type=text/javascript src=/js/scripts.min.bafc052229b4b40bf03c477d31c5cdd9352ece8afbadf35ab97ed14495098fc9.js></script>
+<li class=zerostatic><a href=https://www.zerostatic.io>www.zerostatic.io</a></li></ul></div></div></div></div></div><script type=text/javascript src=/veebimargis/js/scripts.min.bafc052229b4b40bf03c477d31c5cdd9352ece8afbadf35ab97ed14495098fc9.js></script>
 </body></html>
