deploy: a85ea2cdd8fd7ede49c4bd6f942c31dad5831193

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <meta name=twitter:card content>
 <meta name=twitter:site content>
 <meta name=twitter:creator content>
-<link rel=icon href=https://hanskan89.github.io/veebimargis/favicon.png>
-<link rel=stylesheet href=/veebimargis/css/style.min.5806cb2b06171edfca96fdcebbd60c45191277e28cb4edac4f64ecb47f26ed05.css>
+<link rel=icon href=http://example.org/favicon.png>
+<link rel=stylesheet href=/css/style.min.cf2b5ac2a6069647f117838dc608d6b5bc8e5ca9f4917f8bd74f5f25daa9a3a3.css>
 </head><body class="page page-home">
 <div id=main-menu-mobile class=main-menu-mobile>
 <ul>
@@ -22,9 +22,9 @@
 <div class=header>
 <div class=container>
 <div class=logo>
-<a href=https://hanskan89.github.io/veebimargis/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
+<a href=http://example.org/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
 </div><div class=logo-mobile>
-<a href=https://hanskan89.github.io/veebimargis/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
+<a href=http://example.org/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
 </div><div id=main-menu class=main-menu>
 <ul>
 </ul></div><button id=toggle-main-menu-mobile class="hamburger hamburger--slider" type=button>
@@ -49,9 +49,10 @@ CPU kasutus
 <td>
 1
 </td><td>
-postimees.ee
+Postimees
 </td><td>
-xx.x &lt;span class="badge rounded-pill bg-danger">halb&lt;/span>
+xx.x
+<span class="badge rounded-pill bg-danger text-light">halb</span>
 </td></tr><tr>
 <td>
 2
@@ -59,25 +60,27 @@ xx.x &lt;span class="badge rounded-pill bg-danger">halb&lt;/span>
 delfi.ee
 </td><td>
 xx.x
+<span class="badge rounded-pill bg-warning">kehv</span>
 </td></tr><tr>
 <td>
 3
 </td><td>
-ohtuleht.ee
+err.ee
 </td><td>
 xx.x
 </td></tr><tr>
 <td>
 4
 </td><td>
-tv3.ee
+ohtuleht.ee
 </td><td>
 xx.x
+<span class="badge rounded-pill bg-dark text-light">uus</span>
 </td></tr><tr>
 <td>
 5
 </td><td>
-err.ee
+tv3.ee
 </td><td>
 xx.x
 </td></tr><tr>
@@ -102,6 +105,7 @@ CPU kasutus
 kv.ee
 </td><td>
 xx.x
+<span class="badge rounded-pill bg-danger text-light">halb</span>
 </td></tr><tr>
 <td>
 2
@@ -109,6 +113,7 @@ xx.x
 osta.ee
 </td><td>
 xx.x
+<span class="badge rounded-pill bg-warning">kehv</span>
 </td></tr><tr>
 <td>
 3
@@ -123,6 +128,7 @@ xx.x
 liigume.ee
 </td><td>
 xx.x
+<span class="badge rounded-pill bg-dark text-light">uus</span>
 </td></tr><tr>
 <td>
 5
@@ -134,61 +140,17 @@ xx.x
 <td>
 6
 </td><td>
-nami-nami.ee
-</td><td>
-xx.x
-</td></tr><tr>
-<td>
-7
-</td><td>
-upload.ee
-</td><td>
-xx.x
-</td></tr><tr>
-<td>
-8
-</td><td>
-tallinn.ee
-</td><td>
-xx.x
-</td></tr><tr>
-<td>
-9
-</td><td>
 iha.ee
-</td><td>
-xx.x
-</td></tr><tr>
-<td>
-10
-</td><td>
-hinnavaatlus.ee
-</td><td>
-xx.x
-</td></tr><tr>
-<td>
-11
-</td><td>
-kalkulaator.ee
 </td><td>
 xx.x
 </td></tr></table><div class=card style=width:18rem>
 <h5 class="card-header mb-0">Kuidas tabelit lugeda?</h5><div class=card-body>
 <p class=card-text>Mida kõrgem on näitaja "CPU kasutus", seda energiat raiskavam on veebileht.</p></div></div><h2 id=metoodika>Metoodika</h2><p>Kuidas tabel koostatakse?</p><ol>
-<li>Võtsime valimisse Eesti enimkülastatuimad veebilehed Gemiuse ja <a href=https://metrix.station.ee>station.ee</a> andmete põhjal.</li><li>Mõõdame &mldr;</li><li></li><li>Tulemusi uuendatakse kord nädalas.</li></ol><p>Viimane uuendus: 22.02.2022.</p><p>
-<span class="badge rounded-pill
-bg-warning">kehv</span>
-<span class="badge rounded-pill
-bg-danger text-light">halb</span>
-<span class="badge rounded-pill
-bg-success text-light">hea</span>
-<span class="badge rounded-pill
-bg-dark text-light">uus info</span>
-</p><p>Test</p></div></div></div></div></div></div><div class=sub-footer>
+<li>Võtsime valimisse Eesti enimkülastatuimad veebilehed Gemiuse ja <a href=https://metrix.station.ee>station.ee</a> andmete põhjal.</li><li>Mõõdame &mldr;</li><li></li><li>Tulemusi uuendatakse kord nädalas.</li></ol><p>Viimane uuendus: 22.02.2022.</p></div></div></div></div></div></div><div class=sub-footer>
 <div class=container>
 <div class=row>
 <div class=col-12>
 <div class=sub-footer-inner>
 <ul>
-<li class=zerostatic><a href=https://www.zerostatic.io>www.zerostatic.io</a></li></ul></div></div></div></div></div><script type=text/javascript src=/veebimargis/js/scripts.min.bafc052229b4b40bf03c477d31c5cdd9352ece8afbadf35ab97ed14495098fc9.js></script>
+<li>Made with <a href=https://www.github.com>Github</a>, <a href=https://www.gohugo.io>Hugo</a>, <a href=https://www.zerostatic.io>zerostatic</a>.</li></ul></div></div></div></div></div><script type=text/javascript src=/js/scripts.min.bafc052229b4b40bf03c477d31c5cdd9352ece8afbadf35ab97ed14495098fc9.js></script>
 </body></html>
