deploy: 911d5b4a987be9b1574bcc76c77289e19c4e18f7

--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <title>404 Page not found - Veebimärgis</title><meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=icon href=http://example.org/favicon.png>
-<link rel=stylesheet href=/css/style.min.cf2b5ac2a6069647f117838dc608d6b5bc8e5ca9f4917f8bd74f5f25daa9a3a3.css>
+<link rel=icon href=https://hanskan89.github.io/veebimargis/favicon.png>
+<link rel=stylesheet href=/veebimargis/css/style.min.cf2b5ac2a6069647f117838dc608d6b5bc8e5ca9f4917f8bd74f5f25daa9a3a3.css>
 </head><body class=page>
 <div id=main-menu-mobile class=main-menu-mobile>
 <ul>
@@ -12,9 +12,9 @@
 <div class=header>
 <div class=container>
 <div class=logo>
-<a href=http://example.org/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
+<a href=https://hanskan89.github.io/veebimargis/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
 </div><div class=logo-mobile>
-<a href=http://example.org/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
+<a href=https://hanskan89.github.io/veebimargis/><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16"><path d="M11.251.068a.5.5.0 01.227.58L9.677 6.5H13a.5.5.0 01.364.843l-8 8.5a.5.5.0 01-.842-.49L6.323 9.5H3a.5.5.0 01-.364-.843l8-8.5a.5.5.0 01.615-.09z"/></svg></a>
 </div><div id=main-menu class=main-menu>
 <ul>
 </ul></div><button id=toggle-main-menu-mobile class="hamburger hamburger--slider" type=button>
@@ -31,5 +31,5 @@
 <div class=col-12>
 <div class=sub-footer-inner>
 <ul>
-<li>Made with <a href=https://www.github.com>Github</a>, <a href=https://www.gohugo.io>Hugo</a>, <a href=https://www.zerostatic.io>zerostatic</a>.</li></ul></div></div></div></div></div><script type=text/javascript src=/js/scripts.min.bafc052229b4b40bf03c477d31c5cdd9352ece8afbadf35ab97ed14495098fc9.js></script>
+<li>Made with <a href=https://www.github.com>Github</a>, <a href=https://www.gohugo.io>Hugo</a>, <a href=https://www.zerostatic.io>zerostatic</a>.</li></ul></div></div></div></div></div><script type=text/javascript src=/veebimargis/js/scripts.min.bafc052229b4b40bf03c477d31c5cdd9352ece8afbadf35ab97ed14495098fc9.js></script>
 </body></html>
